Removed and added packages, changed the font and added virginialake

--- a/thesis.tex
+++ b/thesis.tex
@@ -3,19 +3,14 @@
 \documentclass[11pt]{report}
 \usepackage{baththesis}
 
-\usepackage{graphicx}
-\usepackage{pst-all}
-\usepackage{subfigure}
-\usepackage{mathrsfs}
-\usepackage{makeidx}
-\usepackage{epsfig}
+%\usepackage{makeidx}
 \usepackage{fancyhdr}
-\usepackage{amsfonts,amsmath,amssymb,amsthm,psfrag}
-\usepackage{algorithmic}
-\usepackage{algorithm}
-\usepackage{wrapfig}
-\usepackage{url}
-\usepackage[numbers]{natbib}
+%\usepackage{amsfonts,amsmath,amssymb,amsthm,psfrag}
+\usepackage[lutzsyntax]{virginialake}\aftrianglefalse
+\usepackage[urw-garamond]{mathdesign} % Comment this to use Times fonts
+  \expandafter\ifx\csname leqslant\endcsname\relax\usepackage{txfonts}\fi
+\usepackage[pdfborder={0 0 0}]{hyperref}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
