Created outline Added a separate file for each chapter and added some section headings

--- a/thesis.tex
+++ b/thesis.tex
@@ -114,16 +114,19 @@
 \newpage
 \pagenumbering{arabic}
 \part{Introduction}
-%\input{chapter1.tex}
-%\input{chapter2.tex}
-%\part{Salience and Art: the benefits of \\ Higher level spatial analysis}
-%\input{chapter3.tex}
-%\input{chapter4.tex}
-%\part{Video Paintbox: the benefits of \\ Higher level temporal analysis}
-%\input{chapter5.tex}
-%\input{chapter6.tex}
-%\input{chapter7.tex}
-%\input{chapter8.tex}
+\input{introduction.tex}
+\part{Deep Inference}
+\input{formalism.tex}
+\input{propositional_classical.tex}
+\input{modal.tex}
+\part{Atomic Flows}
+\input{flows.tex}
+\input{normal_forms.tex}
+\input{flows_and_derivations.tex}
+\input{local_transformations.tex}
+\part{Normalisation}
+\input{streamlining.tex}
+\input{cut_elimination.tex}
 \part{Conclusions}
 %\input{chapter9.tex}
 %\part{Appendices}
