Added more section headings

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -1,1 +1,5 @@
-\chapter{Extracting Atomic Flows from Deep-Inference Derivations}
+\chapter{Atomic Flows and Derivations}
+
+\section{Extracting Flows from Derivations}
+
+\section{The Size of Flows}
