--- a/formalism.tex
+++ b/formalism.tex
@@ -1,1 +1,4 @@
 \chapter{A Deep-Inference Formalism}
+\section{Definitions}
+\section{Comparison with the Calculus of Structures}
+\section{Bureaucracy}
