Added the standard commands using amsthm etc.

--- a/thesis.tex
+++ b/thesis.tex
@@ -5,7 +5,7 @@
 
 %\usepackage{makeidx}
 \usepackage{fancyhdr}
-%\usepackage{amsfonts,amsmath,amssymb,amsthm,psfrag}
+\usepackage{amsfonts,amsmath,amssymb,amsthm}
 \usepackage[lutzsyntax]{virginialake}\aftrianglefalse
 \usepackage[urw-garamond]{mathdesign} % Comment this to use Times fonts
   \expandafter\ifx\csname leqslant\endcsname\relax\usepackage{txfonts}\fi
@@ -45,7 +45,7 @@
     \vskip 40\p@
   }}
 
-%\input{defs}
+\input{defs}
 \makeindex
 
 \degree{Doctor of Philosophy}
