Added Theorems comparing Formalism A to CoS

--- a/formalism.tex
+++ b/formalism.tex
@@ -83,4 +83,10 @@ is unique.
 
 \section{Comparison with the Calculus of Structures}
 
-\section{Bureaucracy}
+\begin{theorem}
+Formalism A p-simulates the calculus of structures and the calculus of structures p-simulates Formalism A.
+\end{theorem}
+
+\begin{theorem}
+A formalism A derivation corresponds to an equivalence class of calculus of structures derivations modulo bureaucracy of type A.
+\end{theorem}
