--- a/formalism.tex
+++ b/formalism.tex
@@ -7,7 +7,7 @@ An \emph{inference rule instance}, $\vlinf{\rho}{}{\beta}{\alpha}$, consists of 
 \end{definition}
 
 \begin{definition}
-Fix a set of formulae, a set of inference rule instances and a set of logical connectives, then a \emph{Formalism A derivation $\vlder{\Psi}{}{\beta}{\alpha}$ from (the formula) $\alpha$ to (the formula) $\beta$}, is defined to be
+Fix a set of formulae, a set of inference rule instances and a set of logical connectives, then a \emph{(Formalism A) derivation $\vlder{\Psi}{}{\beta}{\alpha}$ from (the formula) $\alpha$ to (the formula) $\beta$}, is defined to be
 \begin{enumerate}
  \item a formula, $\Psi=\alpha=\beta$;
  \item a vertical composition
