Added theorem relating the size of flows and derivations

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -3,3 +3,7 @@
 \section{Extracting Flows from Derivations}
 
 \section{The Size of Flows}
+
+\begin{theorem}
+Given a derivation $\Phi$ with associated flow $\phi$, $|\Phi|\leq|\phi|^3$.
+\end{theorem}
