Fixed inference rule labels

--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -3,8 +3,8 @@
 \section{System SKS}
 
 \newcommand{\ai   }{\mathsf{ai}}
-\newcommand{\aw   }{\mathsf{ai}}
-\newcommand{\ac   }{\mathsf{ai}}
+\newcommand{\aw   }{\mathsf{aw}}
+\newcommand{\ac   }{\mathsf{ac}}
 \newcommand{\aid  }{\ai{\downarrow}}
 \newcommand{\awd  }{\aw{\downarrow}}
 \newcommand{\acd  }{\ac{\downarrow}}
