Removed definitions of the representation of atomic flows from the definition of the objects themselves.

--- a/flows.tex
+++ b/flows.tex
@@ -33,48 +33,12 @@ Cointeraction is also called \emph{cut}.
                                 {\scriptstyle-}
                                 {\scriptstyle-}
                                 {\scriptscriptstyle-}}}
-\newcommand{\one  }{{\mathchoice{\scriptstyle\mathbf1}
-                                {\scriptstyle\mathbf1}
-                                {\scriptstyle\mathbf1}
-                                {\scriptscriptstyle\mathbf1}}}
-\newcommand{\two  }{{\mathchoice{\scriptstyle\mathbf2}
-                                {\scriptstyle\mathbf2}
-                                {\scriptstyle\mathbf2}
-                                {\scriptscriptstyle\mathbf2}}}
-\newcommand{\three}{{\mathchoice{\scriptstyle\mathbf3}
-                                {\scriptstyle\mathbf3}
-                                {\scriptstyle\mathbf3}
-                                {\scriptscriptstyle\mathbf3}}}
-\newcommand{\four }{{\mathchoice{\scriptstyle\mathbf4}
-                                {\scriptstyle\mathbf4}
-                                {\scriptstyle\mathbf4}
-                                {\scriptscriptstyle\mathbf4}}}
-\newcommand{\five }{{\mathchoice{\scriptstyle\mathbf5}
-                                {\scriptstyle\mathbf5}
-                                {\scriptstyle\mathbf5}
-                                {\scriptscriptstyle\mathbf5}}}
-\newcommand{\six  }{{\mathchoice{\scriptstyle\mathbf6}
-                                {\scriptstyle\mathbf6}
-                                {\scriptstyle\mathbf6}
-                                {\scriptscriptstyle\mathbf6}}}
-\newcommand{\seven}{{\mathchoice{\scriptstyle\mathbf7}
-                                {\scriptstyle\mathbf7}
-                                {\scriptstyle\mathbf7}
-                                {\scriptscriptstyle\mathbf7}}}
-\newcommand{\eight}{{\mathchoice{\scriptstyle\mathbf8}
-                                {\scriptstyle\mathbf8}
-                                {\scriptstyle\mathbf8}
-                                {\scriptscriptstyle\mathbf8}}}
-\newcommand{\nine }{{\mathchoice{\scriptstyle\mathbf9}
-                                {\scriptstyle\mathbf9}
-                                {\scriptstyle\mathbf9}
-                                {\scriptscriptstyle\mathbf9}}}
 \newcommand{\card}[1]{\mathord\vert #1\mathord\vert}
 \newcommand{\up}{{\mathit up}}
 \newcommand{\lo}{{\mathit lo}}
 %---------------------------------------
 \begin{definition}
-An (\emph{atomic}) \emph{flow} is a tuple $(V,E,\eta,\up,\lo)$ such that:
+An (\emph{atomic}) \emph{flow} is a tuple $(V,E,\eta,\up,\lo)$, denoted $\phi$ or $\psi$, such that:
 \begin{enumerate}
 %-------------------
 \item $V$ is a finite set of \emph{vertices}, denoted by $\nu$;
@@ -105,20 +69,5 @@ An (\emph{atomic}) \emph{flow} is a tuple $(V,E,\eta,\up,\lo)$ such that:
 \item if $\eta(\nu)\in\{\aid,\aiu\}$ then $\pi(E_\nu)=\{\pmi,\ppl\}$.
 \end{enumerate}
 \end{enumerate}
-Besides $\epsilon$, we use small numerals $\one$, $\two$, \dots\ and colours to denote edges. Atomic flows are denoted with $A$, $B$, $C$ and $D$. Given an atomic flow $A$, we say that the sets $L_\top=\{\epsilon_1,\dots,\epsilon_h\}$ and $U_\bot=\{\epsilon'_1,\dots,\epsilon'_k\}$ contain, respectively, the \emph{upper} and \emph{lower edges of $A$}; in such a case, we can represent $A$ as
-\[
-\atomicflow{
-( 0,10)*{\afvju4{\epsilon_1}{}};
-( 2,10)*{\cdots};
-( 4,10)*{\afvju4{}{\epsilon_h}};
-( 5, 6)*{\aflabelleft A};
-( 2, 5)*{\affr66};
-( 0, 0)*{\afvjd4{\epsilon'_1}{}};
-( 2, 0)*{\cdots};
-( 4, 0)*{\afvjd4{}{\epsilon'_k}};
-(-2, 0)*{\invisiblemark};
-( 6, 0)*{\invisiblemark}}
-\quad.
-\]
-In general, we represent atomic flows as directed-graph diagrams, except that the special vertices $\top$ and $\bot$ are not shown, and the labels of the vertices are explicitly shown as graphical elements. When we refer to the vertices of an atomic flow, we do not include $\top$ and $\bot$. Sometimes we identify vertices with their labels. 
+Given an atomic flow $\phi$, we say that the sets $L_\top=\{\epsilon_1,\dots,\epsilon_h\}$ and $U_\bot=\{\epsilon'_1,\dots,\epsilon'_k\}$ contain, respectively, the \emph{upper} and \emph{lower edges of $\phi$}.
 \end{definition}
