Renamed 'cointeraction' to 'cut'

--- a/flows.tex
+++ b/flows.tex
@@ -17,12 +17,11 @@ We call the following six diagrams (\emph{atomic-flow}) \emph{labels}:
 \qquad\vcenter{\afawu{}{}{}{}}&
 \qquad\vcenter{\afacu{}{}{}{}{}{}}\\
 \noalign{\smallskip}
-      \mbox{$\aiu$ or \emph{cointeraction}}&
+      \mbox{$\aiu$ or \emph{cut}}&
 \qquad\mbox{$\awu$ or \emph{coweakening}}&
 \qquad\mbox{$\acu$ or \emph{cocontraction}}\\
 \end{array}\quad.
 \]
-Cointeraction is also called \emph{cut}.
 \end{definition}
 
 \newcommand{\ppl  }{{\mathchoice{\scriptstyle+}
