Added the comands for small numerals (but didn't explain their use)

--- a/flows.tex
+++ b/flows.tex
@@ -70,3 +70,42 @@ An (\emph{atomic}) \emph{flow} is a tuple $(V,E,\eta,\up,\lo)$, denoted $\phi$ o
 \end{enumerate}
 Given an atomic flow $\phi$, we say that the sets $L_\top=\{\epsilon_1,\dots,\epsilon_h\}$ and $U_\bot=\{\epsilon'_1,\dots,\epsilon'_k\}$ contain, respectively, the \emph{upper} and \emph{lower edges of $\phi$}.
 \end{definition}
+
+%TODO: explain the use of colors and small numerals
+
+\newcommand{\one  }{{\mathchoice{\scriptstyle\mathbf1}
+                                {\scriptstyle\mathbf1}
+                                {\scriptstyle\mathbf1}
+                                {\scriptscriptstyle\mathbf1}}}
+\newcommand{\two  }{{\mathchoice{\scriptstyle\mathbf2}
+                                {\scriptstyle\mathbf2}
+                                {\scriptstyle\mathbf2}
+                                {\scriptscriptstyle\mathbf2}}}
+\newcommand{\three}{{\mathchoice{\scriptstyle\mathbf3}
+                                {\scriptstyle\mathbf3}
+                                {\scriptstyle\mathbf3}
+                                {\scriptscriptstyle\mathbf3}}}
+\newcommand{\four }{{\mathchoice{\scriptstyle\mathbf4}
+                                {\scriptstyle\mathbf4}
+                                {\scriptstyle\mathbf4}
+                                {\scriptscriptstyle\mathbf4}}}
+\newcommand{\five }{{\mathchoice{\scriptstyle\mathbf5}
+                                {\scriptstyle\mathbf5}
+                                {\scriptstyle\mathbf5}
+                                {\scriptscriptstyle\mathbf5}}}
+\newcommand{\six  }{{\mathchoice{\scriptstyle\mathbf6}
+                                {\scriptstyle\mathbf6}
+                                {\scriptstyle\mathbf6}
+                                {\scriptscriptstyle\mathbf6}}}
+\newcommand{\seven}{{\mathchoice{\scriptstyle\mathbf7}
+                                {\scriptstyle\mathbf7}
+                                {\scriptstyle\mathbf7}
+                                {\scriptscriptstyle\mathbf7}}}
+\newcommand{\eight}{{\mathchoice{\scriptstyle\mathbf8}
+                                {\scriptstyle\mathbf8}
+                                {\scriptstyle\mathbf8}
+                                {\scriptscriptstyle\mathbf8}}}
+\newcommand{\nine }{{\mathchoice{\scriptstyle\mathbf9}
+                                {\scriptstyle\mathbf9}
+                                {\scriptstyle\mathbf9}
+                                {\scriptscriptstyle\mathbf9}}}
