--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -11,7 +11,7 @@ Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ (mod
 %-------------------
 \item there is a surjective map between the set of atom occurrences of\/ $\Phi$ and the set of edges of $\phi$;
 %-------------------
-\item for each inference step $\vlsmash{\vlinf{\rho}{}{\xi\{\beta\}}{\xi\{\alpha\}}}$ of\/ $\Phi$, where $\rho\in\{\aid,\aiu,\awd,\awu,\acd,\acu\}$ and $\vlinf{\rho}{}{\beta}{\alpha}$ is a rule instance, all atom occurrences in $\xi\vlhole$ in the premiss are respectively mapped to the same edges of $\phi$ as the atom occurrences in $\xi\vlhole$ in the conclusion; the atom occurrences in $\vlinf{\rho}{}{\beta}{\alpha}$ are mapped to edges of $\phi$ such that the edges are related with vertices as indicated below, for each possible case of the inference step:
+\item for each vertical composition $\vlsmash{\vlinf{\rho}{}{\Phi_2}{\Phi_1}}$ of\/ $\Phi$, where $\rho\in\{\aid,\aiu,\awd,\awu,\acd,\acu\}$ and $\vlinf{\rho}{}{\beta}{\alpha}$ is a rule instance, the atom occurrences in $\vlinf{\rho}{}{\beta}{\alpha}$ are mapped to edges of $\phi$ such that the edges are related with vertices as indicated below, for each possible case of the inference rules:
 \[
 \begin{array}{@{}ccc@{}ccc@{}}
 \vlinf{\aid}{}{\vls[a^\one.{\bar a^\two}]}{\ttt}&\mbox{to\/}&
@@ -38,34 +38,34 @@ Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ (mod
 \]
 where the mapping is indicated by small numerals.
 %-------------------
-\item for each inference step of\/ $\Phi$ of kind
+\item for each vertical composition of\/ $\Phi$ of kind
 \[\hss
 \begin{array}{@{}r@{}l@{}}
-\vlinf{\swi}{}{\xi\vlscn[(\alpha.\beta).\gamma]}
-              {\xi\vlscn(\alpha.[\beta.\gamma])}           \quad,&\qquad
-\vlinf{\med}{}{\xi\vlscn([\alpha.\gamma].[\beta.\delta])}
-              {\xi\vlscn[(\alpha.\beta).(\gamma.\delta)]}  \quad,      \\
+\vlinf{\swi}{}{\vls[(\alpha.\beta).\gamma]}
+              {\vls(\alpha.[\beta.\gamma])}           \quad,&\qquad
+\vlinf{\med}{}{\vls([\alpha.\gamma].[\beta.\delta])}
+              {\vls[(\alpha.\beta).(\gamma.\delta)]}  \quad,      \\
 \noalign{\smallskip}
-\vlinf={}{\xi\vlscn[\beta.\alpha]}{\xi\vlscn[\alpha.\beta]}\quad,&\qquad
-\vlinf={}{\xi\vlscn(\beta.\alpha)}{\xi\vlscn(\alpha.\beta)}\quad,      \\
+\vlinf={}{\vls[\beta.\alpha]}{\vls[\alpha.\beta]}\quad,&\qquad
+\vlinf={}{\vls(\beta.\alpha)}{\vls(\alpha.\beta)}\quad,      \\
 \noalign{\smallskip}
-\vlinf={}{\xi\vlscn[\alpha.[\beta.\gamma]]}
-         {\xi\vlscn[[\alpha.\beta].\gamma]}                \quad,&\qquad
-\vlinf={}{\xi\vlscn[[\alpha.\beta].\gamma]}
-         {\xi\vlscn[\alpha.[\beta.\gamma]]}                \quad,      \\
+\vlinf={}{\vls[\alpha.[\beta.\gamma]]}
+         {\vls[[\alpha.\beta].\gamma]}                \quad,&\qquad
+\vlinf={}{\vls[[\alpha.\beta].\gamma]}
+         {\vls[\alpha.[\beta.\gamma]]}                \quad,      \\
 \noalign{\smallskip}
-\vlinf={}{\xi\vlscn(\alpha.(\beta.\gamma))}
-         {\xi\vlscn((\alpha.\beta).\gamma)}                \quad,&\qquad
-\vlinf={}{\xi\vlscn((\alpha.\beta).\gamma)}
-         {\xi\vlscn(\alpha.(\beta.\gamma))}                \quad,      \\
+\vlinf={}{\vls(\alpha.(\beta.\gamma))}
+         {\vls((\alpha.\beta).\gamma)}                \quad,&\qquad
+\vlinf={}{\vls((\alpha.\beta).\gamma)}
+         {\vls(\alpha.(\beta.\gamma))}                \quad,      \\
 \noalign{\smallskip}
-\vlinf={}{\xi\{\alpha\}}{\xi\vlscn[\alpha.\fff]}           \quad,\qquad
-\vlinf={}{\xi\vlscn[\alpha.\fff]}{\xi\{\alpha\}}           \quad,&\qquad
-\vlinf={}{\xi\{\alpha\}}{\xi\vlscn(\alpha.\ttt)}        \qquad\hbox{and\/}\qquad
-\vlinf={}{\xi\vlscn(\alpha.\ttt)}{\xi\{\alpha\}}
+\vlinf={}{\{\alpha\}}{\vls[\alpha.\fff]}           \quad,\qquad
+\vlinf={}{\vls[\alpha.\fff]}{\{\alpha\}}           \quad,&\qquad
+\vlinf={}{\{\alpha\}}{\vls(\alpha.\ttt)}        \qquad\hbox{and\/}\qquad
+\vlinf={}{\vls(\alpha.\ttt)}{\{\alpha\}}
 \end{array}
 \]
-all the atom occurrences in $\xi\vlhole$, $\alpha$, $\beta$, $\gamma$ and $\delta$ in the premiss are respectively mapped to the same edges of $\phi$ as the atom occurrences in $\xi\vlhole$, $\alpha$, $\beta$, $\gamma$ and $\delta$ in the conclusion.
+all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the premiss are respectively mapped to the same edges of $\phi$ as the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the conclusion.
 \end{enumerate}
 \end{proposition}
 
