--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -3,7 +3,7 @@
 \section{Extracting Flows from Derivations}
 
 %TODO: define atomic flows to always be considered modulo isomorphism
-
+%TODO: redo the following proposition once the definition of Formalism A is set in stone
 %---------------------------------------
 \begin{proposition}\label{PropUnFl}
 Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ (modulo isomorphisms) such that:
